# elliptics-fastcgi-old

./: CMakeLists.txt  README.md  configure.in  elliptics-fastcgi-bf.spec
debian/: changelog  control  rules
module/: Makefile.am  elliptics_fastcgi.cpp  elliptics_fastcgi.hpp  magic_provider.hpp  settings.h.in
